src/test/deca/context/invalid/created/wrongTypes/affectation/wrong_type_FLOAT_BOOLEAN.deca
// Description:
//  Assign un bool to float
// 
// Resultats:
//    Ligne 8 : types don't match!
{
    float a;
    a = true;
}